# Changelog
All notable changes to this project will be documented in this file.

The format is loosely based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.html).

## [0.13.2]
- Fix hc disconnect and abort procedure for immediate, device, and streamer.
- Update to disallow all $ commands on feed hold to avoid stalling immediate processing.

## [0.13.1]
- Add hc jobs listing support
- Update home to be immediate rather than job streaming.
- Cleanup naming inconsistencies.

## [0.13.0]
- Add hc, a sample HCLI to enable streaming of G-Code to a CNC through a GRBL 1.1 compliant device.
- Fix parameter quoted string split argument problem

## [0.12.3]
- Fix edge case when system doesn't exist in the context.json.

## [0.12.2]
- Update README huckle usage documentation.

## [0.12.1]
- Update README huckle usage documentation.

## [0.12.0]
- Update hg GPT-3.5 sample application to allow for persistent behavior setting in a conversation (system).

## [0.11.9]
- Update README to refine installation and usage information.

## [0.11.8]
- Update to README for added support context and to lay out future improvement ideas.

## [0.11.7]
- Update to even up carriage returns in blank chat output and context output
- Update setup.py to make media-type for rst file explicity to text/x-rst to pass twine check

## [0.11.6]
- Update to add dry run to publishing to inspect the pypi package properly before publishing
- Add dummy empty files chat.output and context.json to ensure they are wiped out on pip uninstall

## [0.11.5]
- Update to exclude working files for hg HCLI

## [0.11.4]
- Add Python version badge
- Adding circleci coverage for Python 3.11
- Remove hg sample comment that no longer applies
- Refactor hg sample cli.py code to increase clarity

## [0.11.3]
- Cleanup leftover inconsistencies in README.rst

## [0.11.2]