@@ -49,5 +49,3 @@ class Device:
     def abort(self):
         self.device.reset_input_buffer()
         self.device.reset_output_buffer()
-        while self.device.inWaiting():
-            response = self.device.read(200)
